--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h2>Resources</h2>
+
+  <h1>Heading 1: <span style="color: #2a7ae2;">#2a7ae2</span></h1>
+  <h2>Heading 2: <span style="color: #f44336;">#f44336</span></h2>
+  <h3>Heading 3: <span style="color: #4caf50;">#4caf50</span></h3>
+  <h4>Heading 4: <span style="color: #ff9800;">#ff9800</span></h4>
+  <h5>Heading 5: <span style="color: #607d8b;">#607d8b</span></h5>
+  <h6>Heading 6: <span style="color: #ffeb3b;">#ffeb3b</span></h6>
     <script type="text/javascript" src="./script.js">
 </script>
 
